[package]
name = "cch23-klismas"
version = "0.8.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
shuttle-axum = "0.34.1"
shuttle-runtime = "0.34.1"
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
lib-base64 = "2.0.4"
base64 = "0.21.5"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
matchers = "0.1.0"

[dev-dependencies]
tokio = "1.34.0"
hyper = "0.14.27"
tower = "0.4.13"
wiremock = "0.5.22"
