[package]
name = "cch23-klismas"
version = "0.12.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["multipart", "typed-header"] }
shuttle-axum = { version = "0.35.1", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", default-features = false, features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
lib-base64 = "2.0.4"
base64 = "0.21.5"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json", "rustls"] }
matchers = "0.1.0"
tower-http = { version = "0.5.0", features = ["fs"] }
image = { version = "0.24.7", features = [] }
chrono = "0.4.31"
tokio = "1.35.0"
ulid = "1.1.0"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
tokio = "1.34.0"
hyper = "1.0.1"
tower = "0.4.13"
wiremock = "0.5.22"
