[package]
name = "cch23-klismas"
version = "0.21.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.2", features = ["ws"] }
axum-extra = { version = "0.9.0", features = ["multipart", "typed-header"] }
axum-template = { version = "2.0.0", features = ["handlebars"] }
handlebars = "4.5.0"
shuttle-axum = { version = "0.35.1", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.1"
shuttle-shared-db = { version = "0.35.1", default-features = false, features = ["postgres-rustls"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }
tracing = "0.1.40"
serde = { version = "1.0.193", features = ["derive"] }
lib-base64 = "2.0.4"
base64 = "0.21.5"
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json", "rustls"] }
matchers = "0.1.0"
tower-http = { version = "0.5.0", features = ["fs"] }
image = { version = "0.24.7", features = [] }
chrono = "0.4.31"
tokio = "1.35.0"
ulid = "1.1.0"
uuid = { version = "1.6.1", features = ["v4"] }
regex = "1.10.2"
sha2 = "0.10.8"
hex = "0.4.3"
futures = "0.3.29"
futures-util = "0.3.29"
tar = "0.4.40"
tempfile = "3.8.1"
git2 = "0.18.1"
s2 = "0.0.12"

[dev-dependencies]
tokio = "1.34.0"
hyper = "1.0.1"
tower = "0.4.13"
wiremock = "0.5.22"
rstest = "0.18.2"
async-std = { version = "1.5", features = ["attributes"] }
